# RESTapi-contact-book

./: .coverage  .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 1afd01807c25_init.py  4f5e25ada2b9_init.py  61d5529fb280_add_user.py
postgres-data/base/13481/: 1247  1249  1259  16430  16433  16435  16437  16443  16444  16446  16448  16456  16457  16464  16465  16466  16468  16469  16470  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  (+8 more)
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py
src/database/: config.ini  connect.py  models.py
src/repository/: contacts.py  user.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_root.py  test_route_auth.py  test_route_contacts.py  test_route_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
